c/src/test/resources/c/nec_inline_bnc/valid/ex34.ctrl
<controlFile>
  <sourceFile name="../ex34.c" id="1" />
  <run>
    <startPosition fileId="1" line="11" />
    <endPosition fileId="1" line="21" />
  </run>
</controlFile>