c/src/test/resources/c/nec_inline_bnc/invalid/ex13.ctrl
<controlFile>
  <sourceFile name="../ex13.c" id="1" />
  <run>
    <startPosition fileId="1" line="2" />
    <endPosition fileId="1" line="7" />
  </run>
</controlFile>